--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -46,5 +46,13 @@
     "git_url":"https://github.com/kvtemadden/workout-tracker",
     "proj_url": "https://kvtemadden-workout-tracker.herokuapp.com/",
     "thumbnail": "https://github.com/kvtemadden/workout-tracker/raw/main/public/imgs/workout-tracker.PNG?raw=true"
+    },
+    {
+    "_id": 7,
+    "name": "Google Book Search",
+    "desc": "A search tool for finding Google's available books",
+    "git_url":"https://github.com/kvtemadden/google-books",
+    "proj_url": "https://kvtemadden-books-library.herokuapp.com/",
+    "thumbnail": "https://github.com/kvtemadden/google-books/raw/main/assets/google-books.PNG?raw=true"
     }
 ]
