--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.12.1",
+    "npm": "8.19.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
