--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "engines": {
-    "node": "18.12.1",
-    "npm": "8.19.2"
+    "node": "16.13.0"
   },
   "private": true,
   "dependencies": {
